fix(150): Fix spacings

--- a/src/css/150.css
+++ b/src/css/150.css
@@ -48,14 +48,30 @@ main {
         margin-bottom: calc(var(--spacer) * 2);
         text-align: center;
         font-family: Katisbeh;
-        font-size: 3rem;
+        font-size: 2.2rem;
+
+        @media (min-width: 640px) {
+            font-size: 2.5rem;
+        }
+
+        @media (min-width: 1920px) {
+            font-size: 3rem;
+        }
     }
 
     h3 {
         margin: 0;
         text-align: center;
         font-family: Katibeh;
-        font-size: 3rem;
+        font-size: 2.2rem;
+
+        @media (min-width: 640px) {
+            font-size: 2.5rem;
+        }
+
+        @media (min-width: 1920px) {
+            font-size: 3rem;
+        }
     }
 
     hr {
@@ -71,9 +87,18 @@ main {
 
     #datum {
         font-family: Katibeh;
-        font-size: 6rem;
+        font-size: 3rem;
         text-align: center;
         display: block;
+        line-height: 1;
+
+        @media (min-width: 640px) {
+            font-size: 4.5rem;
+        }
+
+        @media (min-width: 1920px) {
+            font-size: 6rem;
+        }
     }
 
     section {
